[gd_scene load_steps=5 format=3 uid="uid://c3fpjattefwwe"]

[ext_resource type="Script" path="res://resource/organs/continuous_organ/air_outlet_organ.gd" id="1_emf27"]
[ext_resource type="Texture2D" uid="uid://dir4xaqhgm1ng" path="res://assets/tile/陷阱.png" id="2_5oxh8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7nyu"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vs78y"]
size = Vector2(44, 96)

[node name="AirOutletOrgan" type="CharacterBody2D"]
collision_layer = 48
script = ExtResource("1_emf27")
organ_name = "吹风口"
organ_desc = "当玩家进入时会被吹起来
"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5oxh8")
region_enabled = true
region_rect = Rect2(0, 96, 48, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h7nyu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -72)
shape = SubResource("RectangleShape2D_vs78y")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
